--- a/index.html
+++ b/index.html
@@ -67,23 +67,18 @@
         <ul>
           <li>
             <img
-              src="images/Rectangle 71-2.jpg"
+              src="images/Rectangle71-2.jpg"
               alt="monitor"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <img
-              src="images/img 2-2.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            />
+            <img src="images/img2-2.jpg" alt="phone" width="360" height="300" />
           </li>
           <li>
             <img
-              src="images/img 3-2.jpg"
+              src="images/img3-2.jpg"
               alt="phone with laptop"
               width="360"
               height="300"
@@ -95,22 +90,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img-5.jpg" />
+            <img src="images/img-5.jpg" alt="man with beard" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img-2-2.jpg" />
+            <img src="images/img-2-2.jpg" alt="man without beard" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img-3-2.jpg" />
+            <img src="images/img-3-2.jpg" alt="woman" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img-4-2.jpg" />
+            <img src="images/img-4-2.jpg" alt="young man" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
