--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -75,18 +76,23 @@
         <ul>
           <li>
             <img
-              src="images/Rectangle71-2.jpg"
+              src="/images/Rectangle71-2.jpg"
               alt="monitor"
               width="360"
               height="300"
             />
           </li>
           <li>
-            <img src="images/img2-2.jpg" alt="phone" width="360" height="300" />
+            <img
+              src="/images/img2-2.jpg"
+              alt="phone"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
             <img
-              src="images/img3-2.jpg"
+              src="/images/img3-2.jpg"
               alt="phone with laptop"
               width="360"
               height="300"
@@ -98,22 +104,42 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img-5.jpg" alt="man with beard" />
+            <img
+              src="/images/img-5.jpg"
+              alt="man with beard"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img-2-2.jpg" alt="man without beard" />
+            <img
+              src="/images/img-2-2.jpg"
+              alt="man without beard"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img-3-2.jpg" alt="woman" />
+            <img
+              src="/images/img-3-2.jpg"
+              alt="woman"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img-4-2.jpg" alt="young man" />
+            <img
+              src="/images/img-4-2.jpg"
+              alt="young man"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
