--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2></h2>
+        <h2>
+          Елемент відсутній на макеті, але потрібен для читалок та пошукових
+          систем
+        </h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -76,7 +79,7 @@
         <ul>
           <li>
             <img
-              src="/images/Rectangle71-2.jpg"
+              src="./images/Rectangle71-2.jpg"
               alt="monitor"
               width="360"
               height="300"
@@ -84,7 +87,7 @@
           </li>
           <li>
             <img
-              src="/images/img2-2.jpg"
+              src="./images/img2-2.jpg"
               alt="phone"
               width="360"
               height="300"
@@ -92,7 +95,7 @@
           </li>
           <li>
             <img
-              src="/images/img3-2.jpg"
+              src="./images/img3-2.jpg"
               alt="phone with laptop"
               width="360"
               height="300"
@@ -105,7 +108,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-5.jpg"
+              src="./images/img-5.jpg"
               alt="man with beard"
               width="264"
               height="260"
@@ -115,7 +118,7 @@
           </li>
           <li>
             <img
-              src="/images/img-2-2.jpg"
+              src="./images/img-2-2.jpg"
               alt="man without beard"
               width="264"
               height="260"
@@ -125,7 +128,7 @@
           </li>
           <li>
             <img
-              src="/images/img-3-2.jpg"
+              src="./images/img-3-2.jpg"
               alt="woman"
               width="264"
               height="260"
@@ -135,7 +138,7 @@
           </li>
           <li>
             <img
-              src="/images/img-4-2.jpg"
+              src="./images/img-4-2.jpg"
               alt="young man"
               width="264"
               height="260"
