--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Kalam:wght@700&family=Open+Sans:ital,wght@1,700&family=Raleway:wght@800&family=Tangerine:wght@700&family=Teko:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Kalam:wght@700&family=Open+Sans:ital,wght@1,700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&family=Tangerine:wght@700&family=Teko:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -12,10 +21,10 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a href="">Contacts</a>
